# Parallelrechner_Hausaufgaben

./: .gitignore  README.md  dummy.txt
00_intro/: cpuidOutputCMD.txt  cpuidUbuntu.txt
00_intro/01_FibonacciCPP/: CMakeLists.txt  fibonacci.cpp
01_SSE_AVX/CRS/: CMakeLists.txt
01_SSE_AVX/MatrixProduct/: CMakeLists.txt  MatrixProductBenchmark.c
01_SSE_AVX/Shuffle/: CMakeLists.txt  ShuffleTest.c
02_Threading/: CMakeLists.txt  MPiMonteCarlo.c  MoneyAccount.c
03_MPI/: CMakeLists.txt  MonteCarloPi.c  Theory.md  Workload.c
05_CUDA_1/: CMakeLists.txt  CudaErrorHelper.h  HelloCuda.cu  LinearFilterCuda.cu  SaxpyCudaBenchmarking.cu  SaxpyCudaBenchmarking_Results
